# rec

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: branch-protection.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: ci-flake.yml
.github/scripts/: apply_branch_protection.sh
.github/workflows/: advisory-checks.yml  ci.yml  merge-gate.yml  nightly-evaluation.yml  release.yml
docs/: branch-protection.md  ci-validation.md
docs/engineering/: ci-policy.md  github-settings.md  merge-philosophy.md
evaluation/datasets/: pt_noisy_subset.json
evaluation/reports/baseline/: evaluation_report.json  evaluation_report.md
scripts/ci/: repo_sanity.sh
src/rec_pipeline/: __init__.py  __main__.py  asr.py  cli.py  config.py  diarization.py  evaluation.py  ingestion.py  providers.py  summary.py  transcript.py
tests/: test_asr.py  test_cli.py  test_config.py  test_diarization.py  test_evaluation.py  test_ingestion.py  test_providers.py  test_summary.py  test_transcript.py
tests/fixtures/: eval_dataset.json
